fix: overflow of span of code

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -72,6 +72,9 @@
 .markdown blockquote > p {
   @apply mb-0;
 }
+.markdown blockquote code[class*='language-'] {
+  white-space: normal !important;
+}
 
 /* Tables */
 .markdown td,
